# ITP4514-Lab

./: .gitignore  pyproject.toml
Lab01/: Lab01-Ex1.py  Lab01-Ex2.py  Lab01-Ex3.py  Lect01_Code Examples.ipynb
Lab02/: Lab02-Ex1.py  Lab02-Ex2.py  Lect02_Code Examples_A.ipynb  Lect02_Code Examples_B.ipynb  Lect02_Code Examples_C.ipynb
Lab03/: Lect03_Code Examples.ipynb
Lab04/: Hidato_Hints.ipynb
Lab05/: Lab05-Ex2.py  Lab05-Ex3.py
Lab06/ipynb/: Lab06-Ex1.ipynb  Lab06-Ex2.ipynb  Lab06-Ex3.ipynb  Lab06-Ex4.ipynb  Lab06-Ex5.ipynb  Lab06-Supp.ipynb  sklearn_datasets_load_iris.ipynb
Lab07/: Lab07Q1.py  Lab07Q2.py  Lab07Q3.py  insuranceBMI.csv
