[tool.poetry]
name = "ailad"
version = "0.1.0"
description = ""
authors = ["Ocean Yeung <ocean.yeung@deeptranlate.hk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.1.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
